started experimenting on migration from MongoDB to Elastic

--- a/notebooks/elasticsearch.ipynb
+++ b/notebooks/elasticsearch.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:31.428398Z",
-     "start_time": "2023-11-13T01:05:28.645918Z"
+     "end_time": "2023-11-15T10:57:59.773038Z",
+     "start_time": "2023-11-15T10:57:56.772359Z"
     }
    },
    "outputs": [],
@@ -24,13 +24,12 @@
     "import tensorflow.compat.v1 as tf\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from gensim.models import Doc2Vec\n",
     "from elasticsearch import Elasticsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "urllib3.disable_warnings()\n",
@@ -41,25 +40,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:31.432672Z",
-     "start_time": "2023-11-13T01:05:31.429121Z"
+     "end_time": "2023-11-15T10:58:00.511604Z",
+     "start_time": "2023-11-15T10:58:00.506536Z"
     }
    },
    "id": "8bee4ed33bfd4de2"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniconda/base/envs/thesis/lib/python3.10/site-packages/elasticsearch/connection/http_urllib3.py:209: UserWarning: Connecting to https://localhost:9200 using SSL with verify_certs=False is insecure.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "outputs": [],
    "source": [
     "es = Elasticsearch(\n",
     "    config['ELASTIC']['path'],\n",
@@ -69,21 +59,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:31.436514Z",
-     "start_time": "2023-11-13T01:05:31.432793Z"
+     "end_time": "2023-11-15T10:58:31.781476Z",
+     "start_time": "2023-11-15T10:58:31.773788Z"
     }
    },
    "id": "a0765846ceac8b21"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "{'name': '1bb166804bb3',\n 'cluster_name': 'docker-cluster',\n 'cluster_uuid': 'm81m9H08RKigCdwIje8C6w',\n 'version': {'number': '8.11.0',\n  'build_flavor': 'default',\n  'build_type': 'docker',\n  'build_hash': 'd9ec3fa628c7b0ba3d25692e277ba26814820b20',\n  'build_date': '2023-11-04T10:04:57.184859352Z',\n  'build_snapshot': False,\n  'lucene_version': '9.8.0',\n  'minimum_wire_compatibility_version': '7.17.0',\n  'minimum_index_compatibility_version': '7.0.0'},\n 'tagline': 'You Know, for Search'}"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,51 +84,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:31.480681Z",
-     "start_time": "2023-11-13T01:05:31.436033Z"
+     "end_time": "2023-11-15T10:58:01.977229Z",
+     "start_time": "2023-11-15T10:58:01.935534Z"
     }
    },
    "id": "7bd73deffbc91e05"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
-   "source": [
-    "model = Doc2Vec.load('../out/models/word2vec.model')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:31.537636Z",
-     "start_time": "2023-11-13T01:05:31.481008Z"
-    }
-   },
-   "id": "e080f62b7bd50e36"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 50%|████▉     | 1983/3996 [00:05<00:05, 390.76it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 17\u001B[0m\n\u001B[1;32m     15\u001B[0m     specs_names\u001B[38;5;241m.\u001B[39mappend(contents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minfo\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtitle\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m     16\u001B[0m     specs_versions\u001B[38;5;241m.\u001B[39mappend(contents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minfo\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mversion\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m contents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minfo\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mversion\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mstartswith(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mv\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01melse\u001B[39;00m contents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minfo\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mversion\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;241m1\u001B[39m:])\n\u001B[0;32m---> 17\u001B[0m     specs\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m.\u001B[39mjoin(re\u001B[38;5;241m.\u001B[39mfindall(nl_tags, \u001B[38;5;28;43mstr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mcontents\u001B[49m\u001B[43m)\u001B[49m)))\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m json\u001B[38;5;241m.\u001B[39mJSONDecodeError:\n\u001B[1;32m     19\u001B[0m     \u001B[38;5;28;01mcontinue\u001B[39;00m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
    "source": [
     "specs = []\n",
     "specs_names = []\n",
@@ -161,85 +116,31 @@
     "            continue"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:38.128508Z",
-     "start_time": "2023-11-13T01:05:31.539874Z"
-    }
+    "collapsed": false
    },
    "id": "666bb89fcbea3db8"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading pre-trained embeddings from tensorflow hub...\n",
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print('Downloading pre-trained embeddings from tensorflow hub...')\n",
     "tf.disable_eager_execution()\n",
-    "embed = hub.Module('https://tfhub.dev/google/universal-sentence-encoder/2')\n",
+    "embed = hub.Module('../out/models/universal-sentence-encoder')\n",
     "text_ph = tf.placeholder(tf.string)\n",
     "embeddings = embed(text_ph)\n",
     "print('Done.')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:45.336512Z",
-     "start_time": "2023-11-13T01:05:44.556211Z"
-    }
+    "collapsed": false
    },
    "id": "750a8c5df1cd7ef0"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating tensorflow session...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-13 02:05:46.255951: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:382] MLIR V1 optimization pass is not enabled\n",
-      "2023-11-13 02:05:47.160057: W tensorflow/c/c_api.cc:305] Operation '{name:'module/string_to_index_11/hash_table/table_init' id:3918 op device:{requested: '', assigned: ''} def:{{{node module/string_to_index_11/hash_table/table_init}} = InitializeTableV2[Tkey=DT_STRING, Tval=DT_INT64, _has_manual_control_dependencies=true](module/string_to_index_11/hash_table, module/Embeddings_en_words, module/string_to_index_11/ToInt64)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print('Creating tensorflow session...')\n",
     "config = tf.ConfigProto()\n",
@@ -250,11 +151,7 @@
     "print('Done.')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-13T01:05:48.944624Z",
-     "start_time": "2023-11-13T01:05:46.148619Z"
-    }
+    "collapsed": false
    },
    "id": "79c1bfc519f5bf41"
   },
