--- a/notebooks/indexing.ipynb
+++ b/notebooks/indexing.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:05:45.950663Z",
-     "start_time": "2023-11-09T08:05:45.209170Z"
+     "end_time": "2023-11-14T15:31:13.082983Z",
+     "start_time": "2023-11-14T15:31:11.359778Z"
     }
    },
    "outputs": [],
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def train_doc2vec(corpus, retrain=False):\n",
-    "    path = '../out/models/word2vec.model'\n",
+    "    path = '../out/models/doc2vec.model'\n",
     "    \n",
     "    if not os.path.isfile(path) or retrain:\n",
     "        tagged_documents = [TaggedDocument(doc, [i]) for i, doc in enumerate(corpus)]\n",
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:05:45.953814Z",
-     "start_time": "2023-11-09T08:05:45.951299Z"
+     "end_time": "2023-11-14T15:31:13.086959Z",
+     "start_time": "2023-11-14T15:31:13.083421Z"
     }
    },
    "id": "4e506aa184fc4dda"
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:05:45.956764Z",
-     "start_time": "2023-11-09T08:05:45.954660Z"
+     "end_time": "2023-11-14T15:31:13.090438Z",
+     "start_time": "2023-11-14T15:31:13.086746Z"
     }
    },
    "id": "44c89702e566c55b"
@@ -103,19 +103,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:05:45.959790Z",
-     "start_time": "2023-11-09T08:05:45.957616Z"
+     "end_time": "2023-11-14T15:31:13.093865Z",
+     "start_time": "2023-11-14T15:31:13.090067Z"
     }
    },
    "id": "8b2278d33a87334f"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ab8b33dbc8923509"
   },
   {
    "cell_type": "code",
@@ -125,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3996/3996 [02:29<00:00, 26.80it/s]\n"
+      "100%|██████████| 3996/3996 [02:41<00:00, 24.82it/s]\n"
      ]
     }
    ],
@@ -154,15 +146,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:08:16.326950Z",
-     "start_time": "2023-11-09T08:05:45.961922Z"
+     "end_time": "2023-11-14T15:33:55.459603Z",
+     "start_time": "2023-11-14T15:31:13.094462Z"
     }
    },
    "id": "e21e53e2b6b44ad3"
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "doc2vec_model = train_doc2vec(specs)\n",
@@ -171,27 +163,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:11:10.975793Z",
-     "start_time": "2023-11-09T08:11:10.898382Z"
+     "end_time": "2023-11-14T15:33:55.512138Z",
+     "start_time": "2023-11-14T15:33:55.458442Z"
     }
    },
    "id": "e6b41ee5f06ef0a9"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These are the top 5 results of the query \"news\":\n",
+      "These are the top 5 results of the query \"weather forecast by city\":\n",
       "\n",
-      "\t1. MLB v3 RotoBaller Articles       v.1.0   [58%]\n",
-      "\t2. MLB v3 RotoBaller Premium News   v.1.0   [55%]\n",
-      "\t3. NBA v3 RotoBaller Articles       v.1.0   [53%]\n",
-      "\t4. BizToc                           v.1     [51%]\n",
-      "\t5. NFL v3 RotoBaller Articles       v.1.0   [50%]\n"
+      "\t1. Transform                 v.1.0.0        [60%]\n",
+      "\t2. SpellCheckPro             v.1.0.0        [59%]\n",
+      "\t3. NetworkManagementClient   v.2016-12-01   [56%]\n",
+      "\t4. NetworkManagementClient   v.2017-03-01   [56%]\n",
+      "\t5. NetworkManagementClient   v.2018-10-01   [56%]\n"
      ]
     }
    ],
@@ -203,13 +195,13 @@
     "# checking email mailboxes / email checker\n",
     "# news\n",
     "\n",
-    "get_top_n_docs(doc2vec_model, specs_names, specs_versions, \"news\", n=5);"
+    "get_top_n_docs(doc2vec_model, specs_names, specs_versions, \"weather forecast by city\", n=5);"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T08:23:19.875768Z",
-     "start_time": "2023-11-09T08:23:19.827705Z"
+     "end_time": "2023-11-14T15:33:55.640513Z",
+     "start_time": "2023-11-14T15:33:55.514889Z"
     }
    },
    "id": "30fb53786c9378fe"
