--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -154,19 +154,21 @@
     "    raw_pos = []\n",
     "    positions = []\n",
     "\n",
-    "    for ind, frequency in enumerate(frequencies):\n",
+    "    for ind1, frequency in enumerate(frequencies):\n",
     "        for ind2, element in enumerate(frequency):\n",
-    "            if ground_truth[ind][1].strip().lower() in element.strip().lower():\n",
+    "            if ground_truth[ind1][1].strip().lower() in element.strip().lower():\n",
     "                raw_pos.append(ind2 + 1)\n",
     "                positions.append(1 / (ind2 + 1))\n",
     "                break\n",
     "        else:\n",
     "            positions.append(0)\n",
     "\n",
-    "    return (sum(positions) / len(positions),\n",
-    "            raw_pos,\n",
-    "            reduce(lambda pre, el: pre + 1 if el != 0 else pre, positions, 0),\n",
-    "            len(positions))"
+    "    return (\n",
+    "        sum(positions) / len(positions),\n",
+    "        raw_pos,\n",
+    "        reduce(lambda pre, el: pre + 1 if el != 0 else pre, positions, 0),\n",
+    "        len(positions)\n",
+    "    )"
    ],
    "metadata": {
     "collapsed": false,
