written part of the state of the art and part of the feasibility study

--- a/notebooks/elasticsearch.ipynb
+++ b/notebooks/elasticsearch.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-15T10:57:59.773038Z",
-     "start_time": "2023-11-15T10:57:56.772359Z"
+     "end_time": "2023-11-16T15:30:45.099095Z",
+     "start_time": "2023-11-16T15:30:41.228315Z"
     }
    },
    "outputs": [],
@@ -40,15 +40,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T10:58:00.511604Z",
-     "start_time": "2023-11-15T10:58:00.506536Z"
+     "end_time": "2023-11-16T15:30:45.103563Z",
+     "start_time": "2023-11-16T15:30:45.100156Z"
     }
    },
    "id": "8bee4ed33bfd4de2"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "es = Elasticsearch(\n",
@@ -57,11 +57,7 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-15T10:58:31.781476Z",
-     "start_time": "2023-11-15T10:58:31.773788Z"
-    }
+    "collapsed": false
    },
    "id": "a0765846ceac8b21"
   },
@@ -84,16 +80,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T10:58:01.977229Z",
-     "start_time": "2023-11-15T10:58:01.935534Z"
+     "end_time": "2023-11-16T15:30:45.156128Z",
+     "start_time": "2023-11-16T15:30:45.106656Z"
     }
    },
    "id": "7bd73deffbc91e05"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3996/3996 [00:12<00:00, 318.92it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "specs = []\n",
     "specs_names = []\n",
@@ -116,7 +120,11 @@
     "            continue"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T15:30:59.020131Z",
+     "start_time": "2023-11-16T15:30:45.156304Z"
+    }
    },
    "id": "666bb89fcbea3db8"
   },
@@ -200,10 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "query = 'weather forecast by city'\n",
+    "query = 'american sports news'\n",
     "\n",
     "knn_query = {\n",
     "    'knn': {\n",
@@ -219,32 +227,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-13T10:04:23.202061Z",
-     "start_time": "2023-11-13T10:04:23.175820Z"
+     "end_time": "2023-11-16T15:31:02.380734Z",
+     "start_time": "2023-11-16T15:31:02.144728Z"
     }
    },
    "id": "daa00fc4dd046b6e"
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These are the top 10 results of the query \"weather forecast by city\":\n",
+      "These are the top 5 results of the query \"american sports news\":\n",
       "\n",
-      "\t1. Storm Glass Marine Weather              v.1.0.1   [79%]\n",
-      "\t2. Interzoid Get Weather City API          v.1.0.0   [78%]\n",
-      "\t3. ODWeather                               v.1.0     [75%]\n",
-      "\t4. Visual Crossing Weather API             v.4.6     [75%]\n",
-      "\t5. Interzoid Get Weather By Zip Code API   v.1.0.0   [75%]\n"
+      "\t1. NFL v3 Play-by-Play     v.1.0   [67%]\n",
+      "\t2. News Plugin             v.1     [66%]\n",
+      "\t3. Soccer v3 Projections   v.1.0   [64%]\n",
+      "\t4. MLB v3 Projections      v.1.0   [64%]\n",
+      "\t5. NFL v3 Scores           v.1.0   [64%]\n"
      ]
     }
    ],
    "source": [
-    "print(f'These are the top 10 results of the query \"{query}\":\\n')\n",
+    "print(f'These are the top 5 results of the query \"{query}\":\\n')\n",
     "\n",
     "for ind, result in enumerate(results):\n",
     "    length_name = max([len(el['_source']['name']) for el in results]) + 2\n",
@@ -255,8 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-13T10:04:24.941436Z",
-     "start_time": "2023-11-13T10:04:24.937881Z"
+     "end_time": "2023-11-16T15:36:10.609326Z",
+     "start_time": "2023-11-16T15:36:10.605517Z"
     }
    },
    "id": "7714a586e10ecff7"
