--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -90,12 +90,27 @@
 
     \section{Proposal}\label{sec:proposal}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \section{State of the Art}\label{sec:state-of-the-art}
 
+    \subsection{OpenAPI Specification}\label{subsec:openapi-specification}
+    \input{sections/state-of-the-art/open-api}
+
+    \subsection{Document Embedding}\label{subsec:indexing-and-searching}
+    \input{sections/state-of-the-art/document-embedding}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \section{Preliminary Results - Feasibility Study}\label{sec:preliminary-results---feasibility-study}
 
+    \subsection{Indexing and Searching}\label{sec:indexing-and-searching}
+    \input{sections/feasibility-study/indexing-and-searching}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \section{Work Plan for the Spring semester}\label{sec:work-plan-for-the-spring-semester}
     \input{sections/plan/table}
