--- a/proposal/bibliography/bibliography.bib
+++ b/proposal/bibliography/bibliography.bib
@@ -3,3 +3,10 @@
     author = {Swagger},
     url    = {https://swagger.io/specification/}
 }
+
+@article{cer2018universal,
+  title={Universal sentence encoder},
+  author={Cer, Daniel and Yang, Yinfei and Kong, Sheng-yi and Hua, Nan and Limtiaco, Nicole and John, Rhomni St and Constant, Noah and Guajardo-Cespedes, Mario and Yuan, Steve and Tar, Chris and others},
+  journal={arXiv preprint arXiv:1803.11175},
+  year={2018}
+}
