added code for migration (can only migrate half of the db)

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -88,17 +88,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \section{Proposal}\label{sec:proposal}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
     \section{State of the Art}\label{sec:state-of-the-art}
 
     \subsection{OpenAPI Specification}\label{subsec:openapi-specification}
     \input{sections/state-of-the-art/open-api}
 
-    \subsection{Document Embedding}\label{subsec:indexing-and-searching}
+    \subsection{Document Embedding}\label{subsec:document-embedding}
     \input{sections/state-of-the-art/document-embedding}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,8 +101,13 @@
 
     \section{Preliminary Results - Feasibility Study}\label{sec:preliminary-results---feasibility-study}
 
-    \subsection{Indexing and Searching}\label{sec:indexing-and-searching}
+    \subsection{Indexing and Searching}\label{subsec:indexing-and-searching}
     \input{sections/feasibility-study/indexing-and-searching}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+    \section{Proposal}\label{sec:proposal}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
